# user-crud-service

./: README.md
user-crud-service/user-crud-service/: app.py  docker-compose.yaml  pyproject.toml
user-crud-service/user-crud-service/configs/: config.py
user-crud-service/user-crud-service/src/: Dockerfile  app.py  config.py  db_utils.py  models.py  requirements.txt  views.py
user-crud-service/user-crud-service/utils/: db_utils.py
