[tool.poetry]
name = "python-client"
version = "0.0.1"
description = ""
authors = ["Paul"]
package-mode = false

readme = "README.md"
[tool.poetry.dependencies]
python = "^3.11"
#openai = "^1.60.2"
#python-dotenv = "^1.0.1"
#requests = "^2.32.3"
#beautifulsoup4 = "^4.13.0"
#langchain = "^0.3.17"
#langchain-community = "^0.3.17"
#langgraph = "^0.2.71"
flask = "^3.1.0"
psycopg2 = "^2.9.10"
sqlalchemy = "^2.0.38"
flask-sqlalchemy = "^3.1.1"
pydantic = "^2.10.6"
loguru = "^0.7.3"
flask-migrate = "^4.1.0"



[build-system]
requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"